Fixing title link height to not overflow into subnav

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ p.caption {font-family:"Helvetica Neue",Helvetica,sans-serif;font-size:12px;}
 }
 #header .title {
 	width:319px;
-	height:69px;
+	height:49px;
 	text-indent:-500em;
 	background-repeat:no-repeat;
 	background-image: url(static/img/publications-logo.png);
